--- a/app.yaml
+++ b/app.yaml
@@ -14,3 +14,6 @@ libraries:
   version: latest
 - name: endpoints
   version: 1.0
+
+env_variables:
+  WEB_CLIENT_ID: '768767255656-sct9bc9j1s9gvphm3o9g4tkifgo4p075.apps.googleusercontent.com'
