--- a/index.yaml
+++ b/index.yaml
@@ -20,3 +20,8 @@ indexes:
   properties:
   - name: purchase_date
     direction: desc
+
+- kind: SupplierModel
+  ancestor: yes
+  properties:
+  - name: name
