--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,5 @@ python:
 install: "pip install -t lib -r requirements.txt"
 # command to run tests
 # script: nosetests
+notifications:
+  email: false
