--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,11 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: CustomerModel
+  ancestor: yes
+  properties:
+  - name: name
+
 - kind: ProductModel
   ancestor: yes
   properties:
