--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
 # command to install dependencies
 install: "pip install -t lib -r requirements.txt"
 # command to run tests
-# script: nosetests
+script: nosetests test.py
 notifications:
   email: false
