--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.7"
 # command to install dependencies
-install: "pip install -t lib -r requirements.txt"
+install: 
+ - pip install -t lib -r requirements.txt
 # command to run tests
-# script: nosetests test.py
+script: 
+ - python test.py
 notifications:
   email: false
