--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,34 @@
 language: python
+
 python:
   - "2.7"
+
+branches:
+  only:    
+    - master
+
+#env:
+#  secure: "tpoIGJNJKWvlvTHCO/Uz1YeOMDqHinuCXxgl6muOI6tejS5mC7gObNv0d4DfNIH5q9Q6nV0gg3Dj95IJ1PKRJHDRxPO62NSqOO0kycfDRCj9/pAsAsDy9EISz9r5Q8Pd24PDl0b4CN4797vNqHYpyeLhl4nbLVxO2fYIlB07uJM="
+
+
 before_script:
-- export PYTHONPATH=${PYTHONPATH}:google_appengine
+- wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.23.zip -nv
+- unzip -q google_appengine_1.9.23.zip
+- sudo ln -s `pwd`/google_appengine /usr/local/google_appengine
+- sudo ln -s `pwd`/google_appengine/dev_appserver.py /usr/local/bin/dev_appserver.py
+- npm install
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start    
+
 
 # command to install dependencies
 install: 
  - pip install -t lib -r requirements.txt
- - appcfg.py -A salomax-marketplace update .
+ - /usr/local/google_appengine/appcfg.py --env_variable=DEBUG:False --oauth2_refresh_token=$GAE_OAUTH_TOKEN update .
  
 # command to run tests
 script: 
  - python test.py
+ 
 notifications:
   email: false
