--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
   - "2.7"
+before_script:
+- export PYTHONPATH=${PYTHONPATH}:google_appengine
+
 # command to install dependencies
 install: 
  - pip install -t lib -r requirements.txt
+ - appcfg.py -A salomax-marketplace update .
+
 # command to run tests
 script: 
  - python test.py
