--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ python:
   - "2.7"
   
 before_script:
-- export PYTHONPATH=${PYTHONPATH}:google_appengine
+- wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.23.zip -nv
+- unzip -q google_appengine_1.9.23.zip
+- sudo ln -s `pwd`/google_appengine /usr/local/google_appengine
+- sudo ln -s `pwd`/google_appengine/dev_appserver.py /usr/local/bin/dev_appserver.py
 
 # command to install dependencies
 install: 
  - pip install -t lib -r requirements.txt
- - appcfg.py -A salomax-marketplace update .
+ - /usr/local/google_appengine/appcfg.py -A salomax-marketplace update .
 
 # command to run tests
 script: 
