--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
  - pip install -t lib -r requirements.txt
  - pip install WebTest
  - pip install coveralls
+ - pip install Pillow
  # - /usr/local/google_appengine/appcfg.py -A salomax-marketplace update .
 
 script:
